# NovelSearch

./: .gitignore  README.md  pyproject.toml
NovelSearch/: cli.py
tests/: test_NovelSearch.py
